VMERRORSHARE.TXT
 Compiling async-recursion v1.1.1
   Compiling ordered-stream v0.2.0
   Compiling hex v0.4.3
   Compiling pathdiff v0.2.3
   Compiling open v5.3.5
   Compiling colorwall-linux v0.1.0 (/home/laxenta/wallpaperengine-local/src-tauri)
   Compiling zbus v5.16.0
error[E0433]: cannot find module or crate `lazy_static` in this scope
  --> src/core/state.rs:10:1
   |
10 | lazy_static::lazy_static! {
   | ^^^^^^^^^^^ use of unresolved module or unlinked crate `lazy_static`

error[E0433]: cannot find module or crate `lazy_static` in this scope
  --> src/platform/engine.rs:18:1
   |
18 | lazy_static::lazy_static! {
   | ^^^^^^^^^^^ use of unresolved module or unlinked crate `lazy_static`

error[E0425]: cannot find value `PLAYER_PROCESSES` in this scope
   --> src/platform/engine.rs:110:25
    |
110 |     let mut processes = PLAYER_PROCESSES.lock().unwrap();
    |                         ^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `PLAYER_PROCESSES` in this scope
   --> src/platform/engine.rs:125:25
    |
125 |     let mut processes = PLAYER_PROCESSES.lock().unwrap();
    |                         ^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `PLAYER_PROCESSES` in this scope
   --> src/platform/engine.rs:145:25
    |
145 |     let mut processes = PLAYER_PROCESSES.lock().unwrap();
    |                         ^^^^^^^^^^^^^^^^ not found in this scope

warning: unused import: `std::sync::Mutex`
 --> src/core/state.rs:8:5
  |
8 | use std::sync::Mutex;
  |     ^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::collections::HashMap`
  --> src/platform/engine.rs:11:5
   |
11 | use std::collections::HashMap;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::sync::Mutex`
  --> src/platform/engine.rs:13:5
   |
13 | use std::sync::Mutex;
   |     ^^^^^^^^^^^^^^^^

error[E0433]: cannot find module or crate `dirs` in this scope
  --> src/core/state.rs:55:5
   |
55 |     dirs::data_dir()
   |     ^^^^ use of unresolved module or unlinked crate `dirs`
   |
   = help: if you wanted to use a crate named `dirs`, use `cargo add dirs` to add it to your `Cargo.toml`

Some errors have detailed explanations: E0425, E0433.
For more information about an error, try `rustc --explain E0425`.
warning: `colorwall-linux` (lib) generated 3 warnings
error: could not compile `colorwall-linux` (lib) due to 6 previous errors; 3 warnings emitted
